# api/docs/swagger.json
@@ -593,7 +593,7 @@
                 }
             }
         },
-        "/api/v1/operations/domains": {
+        "/api/v1/operations-domains": {
             "get": {
                 "description": "retrieve the list of operations domains",
                 "produces": [
@@ -719,7 +719,7 @@
                 }
             }
         },
-        "/api/v1/operations/domains/dashboard": {
+        "/api/v1/operations-domains/list": {
             "get": {
                 "description": "retrieve the list of operations domains names",
                 "produces": [
@@ -734,10 +734,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/fiber.Map"
                         }
                     },
                     "500": {
@@ -749,7 +746,7 @@
                 }
             }
         },
-        "/api/v1/operations/domains/{id}": {
+        "/api/v1/operations-domains/{id}": {
             "get": {
                 "description": "retrieve a operation domain by id",
                 "produces": [
@@ -813,6 +810,12 @@
                             "$ref": "#/definitions/types.Result"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -828,7 +831,7 @@
                 }
             }
         },
-        "/api/v1/operations/types": {
+        "/api/v1/operations-types": {
             "get": {
                 "description": "retrieve the list of operations types",
                 "produces": [
@@ -954,7 +957,7 @@
                 }
             }
         },
-        "/api/v1/operations/types/dashboard": {
+        "/api/v1/operations-types/list": {
             "get": {
                 "description": "retrieve the list of operations types names",
                 "produces": [
@@ -969,10 +972,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/fiber.Map"
                         }
                     },
                     "500": {
@@ -984,7 +984,7 @@
                 }
             }
         },
-        "/api/v1/operations/types/{id}": {
+        "/api/v1/operations-types/{id}": {
             "get": {
                 "description": "retrieve a operation type by id",
                 "produces": [
@@ -1000,6 +1000,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/operation.OperationType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
                         }
                     },
                     "404": {
@@ -1040,6 +1046,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/types.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
                         }
                     },
                     "404": {
@@ -1287,6 +1299,260 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/types.Result"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/transactions-types": {
+            "get": {
+                "description": "retrieve the list of transactions types",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TransactionsTypes"
+                ],
+                "summary": "Get the transactions types list",
+                "operationId": "get-transactions-types",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/transaction.TransactionType"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "create a new transaction type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TransactionsTypes"
+                ],
+                "summary": "Create a new transaction type",
+                "operationId": "post-transaction-type",
+                "parameters": [
+                    {
+                        "description": "transaction Type",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.SaveTransactionTypeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/transactions-types/list": {
+            "get": {
+                "description": "retrieve the list of transactions types names",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TransactionsTypes"
+                ],
+                "summary": "Get the transactions types names list",
+                "operationId": "get-transactions-types-names",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Map"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/transactions-types/{id}": {
+            "get": {
+                "description": "retrieve a transaction type by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TransactionsTypes"
+                ],
+                "summary": "Get a transaction type",
+                "operationId": "get-transaction-type-by-id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction Type ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/transaction.TransactionType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "delete a transaction type",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TransactionsTypes"
+                ],
+                "summary": "Delete a transaction type",
+                "operationId": "delete-transaction-type",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "transaction Type ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "update a transaction type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TransactionsTypes"
+                ],
+                "summary": "Update a transaction type",
+                "operationId": "patch-transaction-type",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction Type ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "transaction Type",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.SaveTransactionTypeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorMessage"
                         }
                     },
                     "404": {
@@ -1691,6 +1957,10 @@
                 }
             }
         },
+        "fiber.Map": {
+            "type": "object",
+            "additionalProperties": true
+        },
         "fireblocks.Blockchain": {
             "type": "object",
             "properties": {
@@ -2034,6 +2304,26 @@
                 }
             }
         },
+        "transaction.TransactionType": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "types.EditBlockchainRequest": {
             "type": "object",
             "properties": {
@@ -2070,7 +2360,7 @@
                 },
                 "asset_id": {
                     "type": "string",
-                    "example": "1234567890"
+                    "example": "XRP_TEST"
                 },
                 "domain": {
                     "type": "string",
@@ -2091,15 +2381,15 @@
                 },
                 "public_key": {
                     "type": "string",
-                    "example": "1234567890"
+                    "example": "123abc"
                 },
                 "vault_id": {
                     "type": "string",
-                    "example": "1234567890"
+                    "example": "17"
                 },
                 "wallet_id": {
                     "type": "string",
-                    "example": "1234567890"
+                    "example": "18"
                 }
             }
         },
@@ -2297,7 +2587,7 @@
             "properties": {
                 "acc_flags": {
                     "type": "integer",
-                    "example": 134567
+                    "example": 2
                 },
                 "alias": {
                     "type": "string",
@@ -2404,6 +2694,18 @@
                 "type": {
                     "type": "string",
                     "example": "NATIVE"
+                }
+            }
+        },
+        "types.SaveTransactionTypeRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "TYPE-NAME"
                 }
             }
         },
